Replace finalize with AutoCloseable and Cleanup, since finalize is deprecated